k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: campus-market.dev
    http:
      paths:
      - path: /api/payments/?(.*)
        pathType: Prefix
        backend:
          service:
            name: payments-srv
            port:
              number: 3000
      - path: /api/orders/?(.*)
        pathType: Prefix
        backend:
          service:
            name: orders-srv
            port:
              number: 3000
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - path: /api/items/?(.*)
        pathType: Prefix
        backend:
          service:
            name: items-srv
            port:
              number: 3000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
  ingressClassName: nginx
